# rhodora

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  clippy.toml
benches/: benchmark.rs
examples/: animation.rs  gui.rs
examples/assets/: cube.mtl  slenderman.gltf
shaders/: basic.frag  egui.frag  egui.vert  pbr.frag  pbr.frag.glsl  pbr.vert  pbr.vert.glsl  post.frag.glsl  postprocess.frag  postprocess.vert  rigid.vert  rigid.vert.glsl  skinned.vert  skinned.vert.glsl  vpl.glsl
src/: anim.rs  boss.rs  camera.rs  dds.rs  dualquat.rs  dvb.rs  egui_integration.rs  file_import.rs  frame_control.rs  gltf_format.rs  keyboard.rs  lib.rs  memory.rs  mesh_import.rs  model_manager.rs  obj_format.rs  obj_manager.rs  pbr_lights.rs  pbr_pipeline.rs  postprocess.rs  rh_error.rs  texture.rs  types.rs  util.rs  validation.rs  vertex.rs  vk_window.rs
src/anim/: types.rs  util.rs
src/animation/: types.rs  util.rs
src/egui_integration/: integration.rs  renderer.rs  utils.rs
src/file_import/: batch.rs  dvb.rs  gltf_file.rs  obj_file.rs  types.rs
src/mesh_import/: batch.rs  gltf_file.rs  obj_file.rs  types.rs  util.rs
src/model_manager/: dvb_wrapper.rs  layout.rs  manager.rs  material.rs  mesh.rs  model.rs  pipeline.rs
src/texture/: dds.rs  import.rs  manager.rs
tests/: dualquat.rs
