[package]
name = "rhodora"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Experimental Vulkan based rendering engine"
readme = "README.md"
repository = "https://github.com/spark752/rhodora"

[features]
visualize = []

# Enable a little optimization in debug mode
[profile.dev]
opt-level = 1

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
string_to_string = "deny"
panic = "deny"

[dependencies]
ahash = "0.8.1"
bytemuck = "1.12.3"
egui = "0.21.0"
egui-winit = "0.21.0"
gltf = { version = "1.4.0", features = ["import", "names", "utils"] }
image = { version = "0.24.0", default-features = false, features = ["png"] }
log = "0.4.8"
nalgebra-glm = "0.18.0"
nalgebra = { version = "0.32.0", features = ["serde-serialize"] }
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.0"
smallvec = "1.10.0"
tobj = "3.2.3"
vulkano = { version = "0.34.0" }
vulkano-shaders = { version = "0.34.0" }
winit = "0.28.0"

[dev-dependencies]
env_logger = "0.11.0"